feat: Add membership date feature